<resources>
    <string name="app_name">Efisiensiku</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_history">History</string>
    <string name="menu_help">Help</string>
    <string name="register">Register</string>
    <string name="skip">Lewati</string>
    <string name="origin_title">Port of Origin</string>
    <string name="origin_body">Choose Port of Origin</string>
    <string name="msg_agent_loaded">Agent data successfully loaded</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="choose_departure_date">Choose Departure Schedule</string>
    <string name="search_agent">Search agent</string>
    <string name="today">Today</string>
    <string name="departure_date">Choose Departure Date</string>
    <string name="load_schedule_success">Schedule has been loaded</string>
    <string name="passenger">Passenger</string>
    <string name="choose_passenger">Choose Passenger</string>
    <string name="save">Save</string>
    <string name="empty_passenger">Register passenger to start order</string>
    <string name="passenger_informations">Passenger Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">Email</string>
    <string name="no_telephone">No Telephone</string>
    <string name="save_success">Save success</string>
    <string name="save_failed">Save failed</string>
    <string name="no_passenger">No passenger</string>
    <string name="penumpang_pendamping">Penumpang Pendamping</string>
</resources>
